--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
   <!-- START HERO -->
   <section class="bg-blog">
-    <div style="background-image: url('images/banner_background.png'); height: 520px; width: 1300px;">
+    <div class="img-fluid" style="background-image: url('images/banner_background.png'); height: 520px; width: 1300px;">
       <br>
       <div class="bg-overlay text-center">
         <a href="#"><img src="images/aboutus_banner.png" alt="Blog" class="img-fluid rounded-3" /></a>
@@ -196,7 +196,7 @@
   <!--CEO-->
   <section>
 
-    <div class="client"
+    <div class="client img-fluid"
       style="background-image: url('images/client_background.png'); height: 800px; width: 1300px; margin-top: 160px;">
 
       <div class="how-section1">
@@ -231,7 +231,7 @@
   <br>
 
   <section class="mission_vission">
-    <div style="background-image: url('images/vision_background.png'); height: 700px; width: 1300px;">
+    <div class="img-fluid" style="background-image: url('images/vision_background.png'); height: 700px; width: 1300px;">
 
       <div class="how-section1">
         <div class="row">
